// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contacts App should add new contacts: 01. Initial state 1`] = `
<App>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <ContactCreator>
        <tr
          className="contact-creator"
        >
          <td>
            <input
              name="name"
              onChange={[Function]}
              placeholder="Contact name..."
              value=""
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              placeholder="Contact email..."
              value=""
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              Add Contact
            </button>
          </td>
        </tr>
      </ContactCreator>
    </tbody>
  </table>
</App>
`;

exports[`Contacts App should add new contacts: 02. Create Test Contact name 1`] = `
<App>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <ContactCreator>
        <tr
          className="contact-creator"
        >
          <td>
            <input
              name="name"
              onChange={[Function]}
              placeholder="Contact name..."
              value="Test Contact"
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              placeholder="Contact email..."
              value=""
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              Add Contact
            </button>
          </td>
        </tr>
      </ContactCreator>
    </tbody>
  </table>
</App>
`;

exports[`Contacts App should add new contacts: 03. Create Test Contact email 1`] = `
<App>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <ContactCreator>
        <tr
          className="contact-creator"
        >
          <td>
            <input
              name="name"
              onChange={[Function]}
              placeholder="Contact name..."
              value="Test Contact"
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              placeholder="Contact email..."
              value="test.contact@gmail.com"
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              Add Contact
            </button>
          </td>
        </tr>
      </ContactCreator>
    </tbody>
  </table>
</App>
`;

exports[`Contacts App should add new contacts: 04. Add Test Contact 1`] = `
<App>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <Contact
        contact={
          Object {
            "email": "test.contact@gmail.com",
            "name": "Test Contact",
          }
        }
        key="test.contact@gmail.com"
      >
        <tr
          className="contact-display"
        >
          <td>
            Test Contact
          </td>
          <td>
            test.contact@gmail.com
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-edit"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-delete"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <ContactCreator>
        <tr
          className="contact-creator"
        >
          <td>
            <input
              name="name"
              onChange={[Function]}
              placeholder="Contact name..."
              value=""
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              placeholder="Contact email..."
              value=""
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              Add Contact
            </button>
          </td>
        </tr>
      </ContactCreator>
    </tbody>
  </table>
</App>
`;

exports[`Contacts App should add new contacts: 05. Add Placeholder Contact 1`] = `
<App>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <Contact
        contact={
          Object {
            "email": "test.contact@gmail.com",
            "name": "Test Contact",
          }
        }
        key="test.contact@gmail.com"
      >
        <tr
          className="contact-display"
        >
          <td>
            Test Contact
          </td>
          <td>
            test.contact@gmail.com
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-edit"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-delete"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <Contact
        contact={
          Object {
            "email": "Placeholder",
            "name": "Placeholder",
          }
        }
        key="Placeholder"
      >
        <tr
          className="contact-display"
        >
          <td>
            Placeholder
          </td>
          <td>
            Placeholder
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-edit"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-delete"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <ContactCreator>
        <tr
          className="contact-creator"
        >
          <td>
            <input
              name="name"
              onChange={[Function]}
              placeholder="Contact name..."
              value=""
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              placeholder="Contact email..."
              value=""
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              Add Contact
            </button>
          </td>
        </tr>
      </ContactCreator>
    </tbody>
  </table>
</App>
`;

exports[`Contacts App should delete contact: 12. Delete Placeholder Contact 1`] = `
<App>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <Contact
        contact={
          Object {
            "email": "test.contact.edited@gmail.com",
            "name": "Test Contact",
          }
        }
        key="test.contact.edited@gmail.com"
      >
        <tr
          className="contact-display"
        >
          <td>
            Test Contact
          </td>
          <td>
            test.contact.edited@gmail.com
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-edit"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-delete"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <ContactCreator>
        <tr
          className="contact-creator"
        >
          <td>
            <input
              name="name"
              onChange={[Function]}
              placeholder="Contact name..."
              value=""
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              placeholder="Contact email..."
              value=""
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              Add Contact
            </button>
          </td>
        </tr>
      </ContactCreator>
    </tbody>
  </table>
</App>
`;

exports[`Contacts App should delete contact: 13. Delete Test Contact 1`] = `
<App>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <ContactCreator>
        <tr
          className="contact-creator"
        >
          <td>
            <input
              name="name"
              onChange={[Function]}
              placeholder="Contact name..."
              value=""
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              placeholder="Contact email..."
              value=""
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              Add Contact
            </button>
          </td>
        </tr>
      </ContactCreator>
    </tbody>
  </table>
</App>
`;

exports[`Contacts App should edit contact: 06. Switch Test Contact to Edit Mode 1`] = `
<App>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <Contact
        contact={
          Object {
            "email": "test.contact@gmail.com",
            "name": "Test Contact",
          }
        }
        key="test.contact@gmail.com"
      >
        <tr
          className="contact-editor"
        >
          <td>
            <input
              autoFocus={true}
              name="name"
              onChange={[Function]}
              value="Test Contact"
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              value="test.contact@gmail.com"
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-save"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-close"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <Contact
        contact={
          Object {
            "email": "Placeholder",
            "name": "Placeholder",
          }
        }
        key="Placeholder"
      >
        <tr
          className="contact-display"
        >
          <td>
            Placeholder
          </td>
          <td>
            Placeholder
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-edit"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-delete"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <ContactCreator>
        <tr
          className="contact-creator"
        >
          <td>
            <input
              name="name"
              onChange={[Function]}
              placeholder="Contact name..."
              value=""
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              placeholder="Contact email..."
              value=""
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              Add Contact
            </button>
          </td>
        </tr>
      </ContactCreator>
    </tbody>
  </table>
</App>
`;

exports[`Contacts App should edit contact: 07. Edit Test Contact name 1`] = `
<App>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <Contact
        contact={
          Object {
            "email": "test.contact@gmail.com",
            "name": "Test Contact",
          }
        }
        key="test.contact@gmail.com"
      >
        <tr
          className="contact-editor"
        >
          <td>
            <input
              autoFocus={true}
              name="name"
              onChange={[Function]}
              value="Edited Test Contact"
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              value="test.contact@gmail.com"
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-save"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-close"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <Contact
        contact={
          Object {
            "email": "Placeholder",
            "name": "Placeholder",
          }
        }
        key="Placeholder"
      >
        <tr
          className="contact-display"
        >
          <td>
            Placeholder
          </td>
          <td>
            Placeholder
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-edit"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-delete"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <ContactCreator>
        <tr
          className="contact-creator"
        >
          <td>
            <input
              name="name"
              onChange={[Function]}
              placeholder="Contact name..."
              value=""
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              placeholder="Contact email..."
              value=""
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              Add Contact
            </button>
          </td>
        </tr>
      </ContactCreator>
    </tbody>
  </table>
</App>
`;

exports[`Contacts App should edit contact: 08. Cancel Test Contact edit 1`] = `
<App>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <Contact
        contact={
          Object {
            "email": "test.contact@gmail.com",
            "name": "Test Contact",
          }
        }
        key="test.contact@gmail.com"
      >
        <tr
          className="contact-display"
        >
          <td>
            Test Contact
          </td>
          <td>
            test.contact@gmail.com
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-edit"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-delete"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <Contact
        contact={
          Object {
            "email": "Placeholder",
            "name": "Placeholder",
          }
        }
        key="Placeholder"
      >
        <tr
          className="contact-display"
        >
          <td>
            Placeholder
          </td>
          <td>
            Placeholder
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-edit"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-delete"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <ContactCreator>
        <tr
          className="contact-creator"
        >
          <td>
            <input
              name="name"
              onChange={[Function]}
              placeholder="Contact name..."
              value=""
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              placeholder="Contact email..."
              value=""
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              Add Contact
            </button>
          </td>
        </tr>
      </ContactCreator>
    </tbody>
  </table>
</App>
`;

exports[`Contacts App should edit contact: 09. Switch Test Contact to edit Mode 1`] = `
<App>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <Contact
        contact={
          Object {
            "email": "test.contact@gmail.com",
            "name": "Test Contact",
          }
        }
        key="test.contact@gmail.com"
      >
        <tr
          className="contact-editor"
        >
          <td>
            <input
              autoFocus={true}
              name="name"
              onChange={[Function]}
              value="Test Contact"
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              value="test.contact@gmail.com"
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-save"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-close"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <Contact
        contact={
          Object {
            "email": "Placeholder",
            "name": "Placeholder",
          }
        }
        key="Placeholder"
      >
        <tr
          className="contact-display"
        >
          <td>
            Placeholder
          </td>
          <td>
            Placeholder
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-edit"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-delete"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <ContactCreator>
        <tr
          className="contact-creator"
        >
          <td>
            <input
              name="name"
              onChange={[Function]}
              placeholder="Contact name..."
              value=""
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              placeholder="Contact email..."
              value=""
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              Add Contact
            </button>
          </td>
        </tr>
      </ContactCreator>
    </tbody>
  </table>
</App>
`;

exports[`Contacts App should edit contact: 10. Edit Test Contact email 1`] = `
<App>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <Contact
        contact={
          Object {
            "email": "test.contact@gmail.com",
            "name": "Test Contact",
          }
        }
        key="test.contact@gmail.com"
      >
        <tr
          className="contact-editor"
        >
          <td>
            <input
              autoFocus={true}
              name="name"
              onChange={[Function]}
              value="Test Contact"
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              value="test.contact.edited@gmail.com"
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-save"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-close"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <Contact
        contact={
          Object {
            "email": "Placeholder",
            "name": "Placeholder",
          }
        }
        key="Placeholder"
      >
        <tr
          className="contact-display"
        >
          <td>
            Placeholder
          </td>
          <td>
            Placeholder
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-edit"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-delete"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <ContactCreator>
        <tr
          className="contact-creator"
        >
          <td>
            <input
              name="name"
              onChange={[Function]}
              placeholder="Contact name..."
              value=""
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              placeholder="Contact email..."
              value=""
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              Add Contact
            </button>
          </td>
        </tr>
      </ContactCreator>
    </tbody>
  </table>
</App>
`;

exports[`Contacts App should edit contact: 11. Save Test Contact edit 1`] = `
<App>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <Contact
        contact={
          Object {
            "email": "test.contact.edited@gmail.com",
            "name": "Test Contact",
          }
        }
        key="test.contact.edited@gmail.com"
      >
        <tr
          className="contact-display"
        >
          <td>
            Test Contact
          </td>
          <td>
            test.contact.edited@gmail.com
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-edit"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-delete"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <Contact
        contact={
          Object {
            "email": "Placeholder",
            "name": "Placeholder",
          }
        }
        key="Placeholder"
      >
        <tr
          className="contact-display"
        >
          <td>
            Placeholder
          </td>
          <td>
            Placeholder
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-edit"
              />
            </button>
            <button
              onClick={[Function]}
            >
              <i
                className="zmdi zmdi-delete"
              />
            </button>
          </td>
        </tr>
      </Contact>
      <ContactCreator>
        <tr
          className="contact-creator"
        >
          <td>
            <input
              name="name"
              onChange={[Function]}
              placeholder="Contact name..."
              value=""
            />
          </td>
          <td>
            <input
              name="email"
              onChange={[Function]}
              placeholder="Contact email..."
              value=""
            />
          </td>
          <td>
            <button
              onClick={[Function]}
            >
              Add Contact
            </button>
          </td>
        </tr>
      </ContactCreator>
    </tbody>
  </table>
</App>
`;
